tweak ui, fix modal z-index

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,3 +31,7 @@ header {
     margin-bottom: 0 !important;
   }
 }
+
+.ui.modal {
+  z-index: 1000;
+}
